new proj/src/objects/GE_Configuration_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>GE_OGGS_Oppty_Id__c</fullName>
        <label>OG GS Oppty Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Oppty_Id_Counter__c</fullName>
        <label>OG Oppty ID Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_OIDCnt__c</fullName>
        <label>OG PII Oppty ID Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_WSIDCntr__c</fullName>
        <label>OG SS WS ID Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PWNUC_Oppty_ID__c</fullName>
        <label>Nuclear Oppty ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GE Configuration Setting</label>
</CustomObject>